# ble-thermometer-scan

./: .gitignore  default.nix  flake.nix  new-scan.py  pyproject.toml  shell.nix  test.py
hack/: ATC_33A3AC  notes  scan.py
src/: scanner.py
