[project]
name = "ble-thermometer-scan"
description = "Scan for Xaoimi Mijia BLE devices and publish to MQTT"
version = "0.1.0"
authors = [{"name" = "Josh Mast", "email" = "josh@mast.zone"}]
requires-python = ">= 3.13"
dependencies = [
    "aiomqtt>=2.4.0",
    "bleak>=1.1.1",
    "structlog>=25.5.0",
]

[project.scripts]
ble-thermometer-scan = "scanner:start"

#[build-system]
#requires = ["uv_build>=0.9.6,<0.10.0"]
#build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ble-thermometer-scan"
module-root = "src"

